--- a/index.html
+++ b/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
-<form class="form" action="">
-    
-    <input placeholder="title" type="text" id="usertitle">
-    <input placeholder="location" type="text" id="userlocation">
-    <button type="submit" id="search">CERCA</button>
-</form>
-<ul class="userjobs">
-</ul>
-<script src="script.js"></script>
+
+    <form class="form" action="">
+
+        <input placeholder="title" type="text" id="usertitle">
+        <input placeholder="location" type="text" id="userlocation">
+        <button type="submit" id="search">CERCA</button>
+    </form>
+    <ul id="userjobs">
+        <li id="title1"></li>
+        <li id="location1"></li>
+    </ul>
+
+    <script src="script.js"></script>
 </body>
+
 </html>
